@@ -2,7 +2,17 @@ RESERVES DIRECT DEPLOYMENT NOTES
 
 Release 2.8.0
 
-  Fabric Notes Coming Soon
+  1. On the remote server, copy reserves_config.xml from current location to /home/httpd/sites/reserves .
+
+  2. In reserves_config.xml, add the ALEPHLink entry as specified in the example file .
+
+  3. In your local checkout, copy fab_config.json.example to fab_config.json and configure fields.
+
+3. Run:
+       $ fab load_config:fab_config.json deploy
+
+  4. Notify Systems to modify sim link to point to the current version of the code.
+
 
 
 Release 2.7.0
